[package]
name = "venus-proof-verify-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
proofman-util = { git = "https://github.com/ethproofs/venus" }
proofman-verifier = { git = "https://github.com/ethproofs/venus", features = ["verify"] }
